Gnumeric 1.12.50

Morten:
	* Fix undo problem with sorting and cell comments.
	* Python loader cleanups.
	* Use Python's bool type instead of rolling our own.
	* Export file:// links to html.  [#569]
	* Export file:// links to xlsx.  [#569]
	* Improve handling of invalid formulae from xlsx.  [#574]

--------------------------------------------------------------------------
Gnumeric 1.12.49

Andreas:
	* Do not try to turn all of LibreOffice's SplitModes into frozen
	panes [file of #557]

Jean:
	* Fix graph size issue when the graph is in its own sheet. [#516]
	* Fix one more graph size issue when the graph is in its own sheet. [#565]

JohnDenker:
	* Fix ssgrep problem when used as a filter.  [#552]

Morten:
	* Rework conditional styling's upper level.
	* Fix autofill array critical.  [#511]
	* Handle missing values in xlsx.  [#517]
	* Fix critical when using fd://1.
	* Don't trim spaces for csv files as per rfc 4180.  [#528]
	* Fix cvs separator guessing problem with quotes.  [#537]
	* Improve handling of expressions in csv files.
	* Plug ssconvert leak.  [#546]
	* Fix bogus time match for "3.a".  [#545]
	* Use 1us resolution for NOW.  [#549]
	* Fix ssconvert sheet selection for csv.  [#555]
	* Test suite improvements.
	* Fix ods import problem with irregular sheet sizes.
	* Fix ods import problem with crazy named expressions.  [#557]
	* Allow plain space as 1000s separator in FR locale.
	* Fix graph size problem affecting image output.  [#507]
	* Check for yelp in autogen.  [#558]
	* Fix ssconvert problem with conditional styles.
	* Move from style regions to style classes in css.
	* Implement #ifdef for built-in css.
	* Dead kitten in css.
	* Improve the drawing of filter combos.
	* Allow theming of grid color.
	* Fix dirty-tracking.  [#554]
	* Plug ods write leak.
	* Disable cs documentation translation due to itstool/libxml2 bug.

--------------------------------------------------------------------------
Gnumeric 1.12.48

Andreas: