@@ -7,6 +7,7 @@ Morten:
 	* Export file:// links to html.  [#569]
 	* Export file:// links to xlsx.  [#569]
 	* Improve handling of invalid formulae from xlsx.  [#574]
+	* Introspection fixes.
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.49
